# lib_table_top

./: Cargo.toml  readme.md
games/tic_tac_toe/: Cargo.toml
games/tic_tac_toe/src/: action.rs  board.rs  helpers.rs  lib.rs  marker.rs  public_info.rs  settings.rs  spectator_view.rs  tic_tac_toe.rs
games/tic_tac_toe/src/bots/: mod.rs  optimal_strategy.rs  totally_random.rs
games/tic_tac_toe/tests/: play.rs  serialization.rs
lttcore/: Cargo.toml
lttcore/src/: action_collector.rs  action_request.rs  action_requests.rs  bot.rs  encoder.rs  encoding.rs  examples.rs  game_host.rs  game_observer.rs  game_player.rs  game_progression.rs  game_runner.rs  id.rs  lib.rs  lib_table_top_identifier.rs  number_of_players.rs  observer.rs  omniscience.rs  play.rs  player.rs  player_resignations.rs  player_set.rs  pov.rs  rng.rs  scenario.rs  seed.rs  spectator.rs  turn.rs  turn_num.rs  view.rs
lttcore/src/bot/: contender.rs  context.rs  defective.rs  mod.rs
lttcore/src/bots/: bot.rs  mod.rs
lttcore/src/common/: cartesian.rs  deck.rs  direction.rs  mod.rs
lttcore/src/common/cartesian/: bounded.rs  mod.rs  point.rs  point_set.rs
lttcore/src/common/deck/: card.rs  cards.rs  draw_pile.rs  mod.rs  rank.rs  suit.rs
lttcore/src/examples/: guess_the_number.rs  hearts.rs  mod.rs  tic_tac_toe.rs
lttcore/src/examples/black_jack/: bot.rs  mod.rs  public_info.rs  settings.rs
lttcore/src/examples/fish_fight/: action.rs  board.rs  bot.rs  mod.rs  public_info.rs  settings.rs
lttcore/src/examples/guess_the_number/: guess_the_number.rs  mod.rs  public_info.rs  settings.rs
lttcore/src/examples/guess_the_number/bot/: mod.rs  prebuilt.rs
lttcore/src/examples/hearts/: game_secret_info.rs  player_secret_info.rs  public_info.rs  settings.rs  trick.rs
lttcore/src/examples/tic_tac_toe/: action.rs  board.rs  bot.rs  bot_test_helpers.rs  helpers.rs  macros.rs  marker.rs  mod.rs  prebuilt_bots.rs  public_info.rs  settings.rs
lttcore/src/examples/tic_tac_toe/bot/: mod.rs  prebuilt.rs  test_helpers.rs  tic_tac_toe_bot.rs  tic_tac_toe_with_history_bot.rs
lttcore/src/game_host/: action_collector.rs  game_host.rs  mod.rs
lttcore/src/game_progression/: game_progression.rs  mod.rs  pov_support.rs  scenario_support.rs  support_from_settings.rs  support_getters.rs  support_povs.rs  support_scenarios.rs
lttcore/src/game_runner/: action_requests.rs  game_host.rs  game_runner.rs  mod.rs  scenario.rs  spectator.rs
lttcore/src/networking/: client_connection.rs  game_host.rs  messages.rs  mod.rs  server_connection.rs  token.rs
lttcore/src/networking/messages/: auth.rs  client_msg.rs  game_setup.rs  in_game.rs  mod.rs  server_msg.rs
lttcore/src/play/: game_advance.rs  game_state.rs  ltt_version.rs  mod.rs  mode.rs  number_of_players.rs  play.rs  player.rs  score.rs  seed.rs  settings.rs  turn_num.rs  view.rs
lttcore/src/pov/: game_observer.rs  game_player.rs  mod.rs  observer.rs  player.rs  scenario.rs
lttcore/src/pov/game_progression/: mod.rs  support_from_settings.rs  support_getters.rs  support_povs.rs  support_scenarios.rs
lttcore/src/state_machines/: game_host.rs  mod.rs
lttcore/src/utilities/: bit_array_256.rs  mod.rs  number_of_players.rs  player_indexed_data.rs  player_item_collector.rs  player_set.rs
lttcore/src/utilities/player_indexed_data/: mod.rs  serialize_and_deserialize.rs
lttcore/src/utilities/player_set/: iter.rs  mod.rs  serialize_and_deserialize.rs  set_algebra.rs
lttcore/src/utilities/stat/: mod.rs
lttcore/tests/: guess_the_number.rs  serialization.rs  tic_tac_toe.rs  tic_tac_toe_serialization.rs
ltti/: Cargo.toml
ltti/src/: main.rs
ltti/src/gui/: game_ui.rs  game_user_interface.rs  mod.rs  tick.rs
ltti/src/gui/common/: footer.rs  layout.rs  mod.rs
ltti/src/gui/game_ui/: action_request.rs  mod.rs
ltti/src/gui/games/: tic_tac_toe.rs
ltti/src/server/: game_host_runtime.rs  mod.rs  start_ws_server.rs
ltti/src/server/runtime/: game_host_runtime.rs  mod.rs
lttnetworking/: Cargo.toml
lttnetworking/src/: auth.rs  client_connection.rs  connection.rs  example_supported_games.rs  game_host.rs  hello.rs  host_game.rs  id.rs  lib.rs  messages.rs  ping.rs  server_connection.rs  supported_games.rs  token.rs  user.rs
lttnetworking/src/client/: client_bot.rs  client_connection.rs  job.rs  mod.rs
lttnetworking/src/messages/: auth.rs  client_msg.rs  close.rs  closed.rs  conn_ctrl.rs  game_setup.rs  hello.rs  in_game.rs  mod.rs  ping.rs  server_msg.rs
lttnetworking/src/server/: game_host.rs  messages.rs  mod.rs  observer_connections.rs  player_connections.rs  server_connection.rs  server_sub_connection.rs
lttnetworking/src/ws/: client.rs  connection.rs  mod.rs  server.rs
lttruntime/: Cargo.toml
lttruntime/src/: error.rs  lib.rs  runtime.rs
lttruntime/src/game_runner/: channels.rs  game_host.rs  game_meta.rs  game_runner.rs  id.rs  mod.rs  observer_connections.rs  player_connections.rs
lttruntime/src/match_maker/: channels.rs  match_maker.rs  messages.rs  mod.rs
lttruntime/src/messages/: game_host.rs  match_maker.rs  mod.rs  observer.rs  player.rs
lttstorage/: Cargo.toml
lttstorage/db/migrations/: 0_hello_world.sql
lttstorage/src/: lib.rs  raw_storage.rs  storage.rs
lttstorage/src/db/: hash_map_db.rs  mod.rs
networking/lttnetworking/: Cargo.toml
networking/lttnetworking/src/: auth.rs  connection.rs  interface.rs  lib.rs  messages.rs  supported_game.rs
networking/lttnetworking/src/client/: client_bot.rs  client_connection.rs  mod.rs
networking/lttnetworking/src/messages/: close.rs  mod.rs  mode.rs  observer.rs  ping.rs
networking/lttnetworking/src/runtime/: channels.rs  encoder.rs  game_host.rs  game_meta.rs  mod.rs  observer_connections.rs  player_connections.rs  runtime.rs
networking/lttnetworking/src/runtime/async_game_runner/: async_game_runner.rs  channels.rs  game_host.rs  mod.rs  player_connections.rs
networking/lttnetworking/src/server/: authorizer.rs  game_host.rs  mod.rs  observer_connections.rs  player_connections.rs  server_connection.rs
networking/lttws/: Cargo.toml
networking/lttws/src/: lib.rs  server.rs
(+25 files in other folders)
