[package]
name = "lttcore"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.0"
rand_chacha = "0.3.1"
derive_builder = "0.10.2"
thiserror = "1.0.23"
smallvec = { version = "1.7.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1"
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = "1.4.0"
im = { version = "15.0.0", features = ["serde"] }
static_assertions = "1.1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.69", optional = true }
bytes = { version = "1.1.0", optional = true }
bit-vec = { version = "0.6.3", features = ["serde"] }
itertools = "0.10.1"

[features]
encoder = ["bytes"]
json_encoder = ["encoder", "serde_json"]
bincode_encoder = ["encoder", "bincode"]

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3.3"
