[package]
name = "ltti"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33.3"
lttcore = { path = "../lttcore" }
lttnetworking = { path = "../lttnetworking" }
tic_tac_toe = { path = "../games/tic_tac_toe" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
