[package]
name = "ltti"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = { version = "1.7.0", features = ["serde"] }
clap = "2.33.3"
lttcore = { path = "../lttcore" }
lttnetworking = { path = "../lttnetworking", features = ["ws"] }
tic_tac_toe = { path = "../games/tic_tac_toe" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
bincode = "1.3.3"
anyhow = "1.0"
async-trait = "0.1.51"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
