[package]
name = "lttnetworking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lttcore = { path = "../lttcore" }
serde = { version = "1.0", features = ["derive", "rc"] }
hex = { version = "0.4.3", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.51"
bincode = "1.3.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
