[package]
name = "lttruntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.51"
dashmap = "4.0.2"
lttcore = { path = "../lttcore", features = ["encoding"] }
serde = { version = "1.0", features = ["derive", "rc"] }
smallvec = { version = "1.7.0", features = ["serde"] }
tokio = { version = "1", features = ["rt", "test-util", "macros"] }
bytes = "1.1.0"
