[package]
name = "lttstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
lttcore = { path = "../lttcore", features = ["encoding"] }
serde = { version = "1.0", features = ["derive", "rc"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.1.0"
chrono = { version = "0.4" , features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
