[package]
name = "lttws"
version = "0.1.0"
edition = "2021"

[dependencies]
lttcore = { path = "../../lttcore" }
lttnetworking = { path = "../lttnetworking" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3.3"
anyhow = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-trait = "0.1.51"
